# muesli4

./: .gitignore  .gitlab-ci.yml  12_compileandrun.sh  16  CMakeLists.txt  CONTRIBUTING.md  LICENSE  New_Project.cdproj  README.md  ReadmeHK.txt  ReadmeNH.md  ReadmeNH.txt  ToDo,txt  ToDo.txt  build.sh  compileandrun.sh  da_test.sh  dc_test.sh  dm_test.sh  errors  gaussian_min.sh  gol_min_compileandrun.sh  justusbuild.sh  largerrunthemall.sh  min_jacobi_compileandrun.sh  min_new_quadro.sh  min_quadrocompileandrun.sh  muesli-config-version.cmake  muesli-config.cmake  muesli-config.cmake.in  new_quadro.sh  onlybuild.sh  quadrocompileandrun.sh  run.sh  slurm-testing.sh  slurm.sh
Archiv/: muesli-config.cmake.in
Archiv/CMakes/: CMakeLists.txt.old
Archiv/Slurms/: slurmBroadwellCurrent.sh  slurmGPUcurrent.sh
Data/: Readme.txt  gassimulation.raw
examples/: aco.cpp  aco.cu  acoTSP_DA.cu  aco_bpp.cpp  aco_flippedds.cpp  aco_singlekernel.cpp  aco_tsp.cpp  aco_tsp_dataset.cpp  aco_wrapper.cpp  array_test.cpp  canny.cu  da_test.cpp  da_test.cu  dc_map.cpp  dc_map_stencil_test.cpp  dc_test.cpp  dm_test.cpp  dm_test.cu  ds_test.cpp  fold_cols_test.cpp  fss.cu  fss.h  fssFunctors.cu  gameoflife.cpp  gameoflife.cu  gassimulation.cpp  gassimulation_test.cpp  gaussianblur-color.cpp  gaussianblur.cpp  gaussianblur.cu  heatdiffusion.cpp  jacobi.cpp  jacobi.cu  jacobisolver.cpp  jacobisolver.cu  mandelbrot.cpp  mandelbrotDA.cu  matmult.cpp  matmult_no_tiling.cpp  meanblur10.cpp  (+17 more)
examples/archiveMuesli2/: canny.cpp  fold_rows_test.cpp  frobenius.cpp  gaussian.cpp  matrix_test.cpp  nbody_no_tiling.cpp  shortest_paths.cpp
include/: Randoms.h  argtype.h  array.h  atomic.h  cdm.h  cubestencil.h  curry.h  da.h  darray.h  dc.h  distribution.h  dm.h  dmatrix.h  ds.h  farm.h  final.h  functors.h  initial.h  larray.h  lmatrix.h  muesli.h  nplmatrix.h  particle.h  pipe.h  plarray.h  plcube.h  plmatrix.h  raytracer.h  rng.h  simpleplmatrix.h  smmatrix.h  timer.h  tour.h  vec2.h  vec3.h
include/detail/: ccdeque.h  combine_kernels.cuh  conversion.h  copy_kernel.cuh  exception.h  exec_plan.h  farm_kernel.cuh  fold_kernels.cuh  functor_base.h  local_farm.h  map_kernels.cuh  process.h  properties.cuh  shared_mem.h  zip_kernels.cuh
include/detail/Archiv/: shared_mem.h
include/test_hepers/: basic.cpp
muesli-build-release/: CMakeCache.txt  Makefile  cmake_install.cmake  da_test  dm_test
src/: .map_kernels.cu.swp  Randoms.cpp  atomic.cpp  ccdeque.cpp  cdm.cpp  cdm.cu  combine_kernel.cu  copy_kernel.cu  da.cpp  dc.cpp  dm.cpp  dmatrix.cpp  dmatrix.cu  dmatrix_common.cpp  ds.cpp  farm.cpp  farm_kernel.cu  final.cpp  fold_kernels.cu  initial.cpp  larray.cpp  lmatrix.cpp  local_farm.cpp  map_kernels.cu  muesli.cpp  muesli_com.cpp  pipe.cpp  process.cpp  zip_kernels.cu
src/Archiv/: darray.cpp  darray.cu  darray_common.cpp
